--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:title="Main"
+        android:id="@+id/Main"
+        android:icon="@drawable/baseline_home_24"/>
     <item android:title="My Bills"
         android:id="@+id/Bills"
         android:icon="@drawable/baseline_data_thresholding_24"/>
