--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,31 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group>
-        <item android:id="@+id/nav_item_one"
+        <item
+            android:id="@+id/nav_item_aboutus"
             android:icon="@drawable/abc_vector_test"
-            android:title="About Us"/>
-        <item android:id="@+id/nav_item_two"
+            android:title="About Us"
+            android:background="@drawable/nav_item_background_light"/>
+        <item
+            android:id="@+id/nav_item_faq"
             android:icon="@drawable/abc_vector_test"
-            android:title="FAQs"/>
-        <item android:id="@+id/nav_item_three"
+            android:title="FAQs"
+            android:background="@drawable/nav_item_background_dark"/>
+        <item
+            android:id="@+id/nav_item_datasec"
             android:icon="@drawable/abc_vector_test"
-            android:title="Data Security"/>
-
+            android:title="Data Security"
+            android:background="@drawable/nav_item_background_light"/>
+        <item
+            android:id="@+id/nav_item_help"
+            android:icon="@drawable/abc_vector_test"
+            android:title="Help and Support"
+            android:background="@drawable/nav_item_background_dark"/>
+        <item
+            android:id="@+id/nav_item_terms"
+            android:icon="@drawable/abc_vector_test"
+            android:title="Terms and Conditions"
+            android:background="@drawable/nav_item_background_light"/>
+        <item
+            android:id="@+id/nav_item_logout"
+            android:icon="@drawable/abc_vector_test"
+            android:title="Logout"
+            android:background="@drawable/nav_item_background_dark"/>
     </group>
-
-    <item android:title="Title 1">
-        <menu>
-            <item android:id="@+id/nav_item_six"
-                android:icon="@drawable/abc_vector_test"
-                android:title="Help and Support"/>
-            <item android:id="@+id/nav_item_seven"
-                android:icon="@drawable/abc_vector_test"
-                android:title="Terms and Conditions"/>
-            <item android:id="@+id/nav_item_eight"
-                android:icon="@drawable/abc_vector_test"
-                android:title="Logout"/>
-        </menu>
-
-    </item>
-
 </menu>
