--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#459DE4</color>
+    <color name="blue">#8ECAE6</color>
     <color name="red">#FF0000</color>
+    <color name="light_gray">#D3D3D3</color>
+    <color name="orange">#Fb8500</color>
+    <color name="bluedark">#023047</color>
+    <color name="light_background">#FFFFFF</color>
+    <color name="dark_background">#F0F0F0</color>
 </resources>
