--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -35,6 +35,19 @@
             app:title="SmartStackBills"
             app:titleCentered="true" />
 
+        <!-- TextView for Month -->
+        <TextView
+            android:id="@+id/tvMonth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Month"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvBills"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp" />
+
         <!-- TextViews for Bills -->
         <TextView
             android:id="@+id/tvBills"
