--- a/app/src/main/res/layout/item_month_header.xml
+++ b/app/src/main/res/layout/item_month_header.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp"
-    android:background="@color/light_gray">
+    app:cardElevation="4dp"
+    app:cardCornerRadius="4dp">
 
     <TextView
-        android:id="@+id/textviewMonthYear"
+        android:id="@+id/textviewMonthHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:layout_margin="16dp"
         android:textSize="16sp"
-        android:textColor="@android:color/black"/>
-</LinearLayout>
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
+</androidx.cardview.widget.CardView>
