--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -35,18 +35,46 @@
             app:title="SmartStackBills"
             app:titleCentered="true" />
 
-        <!-- TextView for Month -->
-        <TextView
-            android:id="@+id/tvMonth"
+        <!-- Month Navigation Layout -->
+        <LinearLayout
+            android:id="@+id/monthNavigationLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Month"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tvBills"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp" />
+            android:orientation="horizontal"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <!-- Left Arrow for Previous Month -->
+            <ImageButton
+                android:id="@+id/btnPreviousMonth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_left"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="@string/previous_month" />
+
+            <!-- Dynamic TextView for Month Display -->
+            <TextView
+                android:id="@+id/tvMonth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp" />
+
+            <!-- Right Arrow for Next Month -->
+            <ImageButton
+                android:id="@+id/btnNextMonth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_right"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="@string/next_month" />
+        </LinearLayout>
+
 
         <!-- TextViews for Bills -->
         <TextView
