--- a/app/src/main/res/layout/activity_calendar_view.xml
+++ b/app/src/main/res/layout/activity_calendar_view.xml
@@ -5,11 +5,11 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".calendarView">
+    tools:context=".MyCalendarView">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
+        android:id="@+id/constraintLayoutCalendar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -46,7 +46,7 @@
                 android:id="@+id/selectedDateTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Fecha seleccionada: "/>
+                android:text="Date selected: "/>
 
 
 
