--- a/app/src/main/res/layout/dialog_box_income.xml
+++ b/app/src/main/res/layout/dialog_box_income.xml
@@ -32,6 +32,24 @@
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
                     android:layout_centerInParent="true"/>
+
+                <ImageView
+                    android:id="@+id/imgDeleteIncome"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_delete"
+                    android:contentDescription="Delete Income"/>
+
+                <!-- Edit Icon -->
+                <ImageView
+                    android:id="@+id/imgEditIncome"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentStart="true"
+                    android:src="@drawable/ic_edit"
+                    android:contentDescription="Edit Income"/>
             </RelativeLayout>
 
             <!-- Middle Section -->
