--- a/app/src/main/res/layout/dialog_box_spendings.xml
+++ b/app/src/main/res/layout/dialog_box_spendings.xml
@@ -32,6 +32,25 @@
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
                     android:layout_centerInParent="true"/>
+
+                <ImageView
+                    android:id="@+id/imgDeleteSpendings"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_delete"
+                    android:contentDescription="Delete Spending"/>
+
+                <!-- Edit Icon -->
+                <ImageView
+                    android:id="@+id/imgEditSpendings"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentStart="true"
+                    android:src="@drawable/ic_edit"
+                    android:contentDescription="Edit Spending"/>
+
             </RelativeLayout>
 
             <!-- Middle Section -->
