update layout MySpendings, MyIncome

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -82,7 +82,7 @@
             android:id="@+id/tvBills"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Open Bills"
+            android:text="Open Payments"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
@@ -166,7 +166,7 @@
             android:id="@+id/tvSpendings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Spendings"
+            android:text="Closed Payments"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
