--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="bluedark">#023047</color>
     <color name="light_background">#FFFFFF</color>
     <color name="dark_background">#F0F0F0</color>
+    <color name="filter_active">#8ECAE6</color>
+    <color name="filter_inactive">#FFFFFF</color>
 </resources>
