--- a/app/src/main/res/layout/activity_my_income.xml
+++ b/app/src/main/res/layout/activity_my_income.xml
@@ -30,6 +30,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- All Button -->
+            <Button
+                android:id="@+id/btnAllIncome"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="All"
+                android:textSize="10sp"
+                app:layout_constraintTop_toBottomOf="@+id/materialToolbarIncome"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btnRecurringIncome"
+                app:layout_constraintHorizontal_chainStyle="packed" />
+
             <!-- Recurring Button -->
             <Button
                 android:id="@+id/btnRecurringIncome"
@@ -39,7 +52,7 @@
                 android:text="@string/recurring"
                 android:textSize="10sp"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarIncome"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btnAllIncome"
                 app:layout_constraintEnd_toStartOf="@+id/btnOneTimeIncome"
                 app:layout_constraintHorizontal_chainStyle="packed" />
 
@@ -74,7 +87,7 @@
                 android:id="@+id/recyclerViewIncome"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/btnRecurringIncome"
+                app:layout_constraintTop_toBottomOf="@+id/btnAllIncome"
                 app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewIncome"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
