--- a/app/src/main/res/layout/activity_my_spendings.xml
+++ b/app/src/main/res/layout/activity_my_spendings.xml
@@ -24,11 +24,23 @@
                 android:layout_height="59dp"
                 app:menu="@menu/top_nav"
                 app:navigationIcon="@drawable/ic_menu"
-                app:title="Spendings"
+                app:title="Closed Payments"
                 app:titleCentered="true"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
+
+            <Button
+                android:id="@+id/btnSpendingsAll"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/all"
+                android:textSize="10sp"
+                app:layout_constraintTop_toBottomOf="@+id/materialToolbarSpendings"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btnEssential"
+                app:layout_constraintHorizontal_chainStyle="packed" />
 
             <Button
                 android:id="@+id/btnEssential"
@@ -38,7 +50,7 @@
                 android:text="@string/essential"
                 android:textSize="10sp"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarSpendings"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btnSpendingsAll"
                 app:layout_constraintEnd_toStartOf="@+id/btnNonEssential"
                 app:layout_constraintHorizontal_chainStyle="packed" />
 
@@ -54,6 +66,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_chainStyle="packed" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewSpendings"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/btnEssential"
+                app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewSpendings"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigationViewSpendings"
                 android:layout_width="0dp"
@@ -63,15 +84,6 @@
                 app:itemTextColor="#000000"
                 app:menu="@menu/bottom_nav"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewSpendings"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/btnEssential"
-                app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewSpendings"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -100,3 +112,4 @@
         app:menu="@menu/activity_main_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
+
