--- a/app/src/main/res/layout/activity_my_bills.xml
+++ b/app/src/main/res/layout/activity_my_bills.xml
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/all"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarBills"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnIncoming"
@@ -49,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/incoming"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarBills"
                 app:layout_constraintStart_toEndOf="@+id/btnAllBills"
                 app:layout_constraintEnd_toStartOf="@+id/btnDue"
@@ -61,6 +63,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/overdue"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarBills"
                 app:layout_constraintStart_toEndOf="@+id/btnIncoming"
                 app:layout_constraintEnd_toStartOf="@+id/btnRecurring"
@@ -73,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/recurring"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarBills"
                 app:layout_constraintStart_toEndOf="@+id/btnDue"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_add"
-                app:backgroundTint="#1E97F4"
+                app:backgroundTint="#8ECAE6"
                 app:fabSize="normal"
                 app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewBills"
                 app:layout_constraintEnd_toEndOf="parent"
