--- a/app/src/main/res/layout/activity_my_spendings.xml
+++ b/app/src/main/res/layout/activity_my_spendings.xml
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/all"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarSpendings"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnEssential"
@@ -49,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/essential"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarSpendings"
                 app:layout_constraintStart_toEndOf="@+id/btnSpendingsAll"
                 app:layout_constraintEnd_toStartOf="@+id/btnNonEssential"
@@ -61,6 +63,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/non_essential"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarSpendings"
                 app:layout_constraintStart_toEndOf="@+id/btnEssential"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_add"
-                app:backgroundTint="#1E97F4"
+                app:backgroundTint="#8ECAE6"
                 app:fabSize="normal"
                 app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewSpendings"
                 app:layout_constraintEnd_toEndOf="parent"
