--- a/app/src/main/res/layout/activity_my_income.xml
+++ b/app/src/main/res/layout/activity_my_income.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:text="All"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarIncome"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnRecurringIncome"
@@ -51,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/recurring"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarIncome"
                 app:layout_constraintStart_toEndOf="@+id/btnAllIncome"
                 app:layout_constraintEnd_toStartOf="@+id/btnOneTimeIncome"
@@ -64,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/one_time"
                 android:textSize="10sp"
+                android:textColor="@color/orange"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarIncome"
                 app:layout_constraintStart_toEndOf="@+id/btnRecurringIncome"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_add"
-                app:backgroundTint="#1E97F4"
+                app:backgroundTint="#8ECAE6"
                 app:fabSize="normal"
                 app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewIncome"
                 app:layout_constraintEnd_toEndOf="parent"
