--- a/app/src/main/res/layout/dialog_box_bill.xml
+++ b/app/src/main/res/layout/dialog_box_bill.xml
@@ -240,6 +240,7 @@
                     android:layout_height="wrap_content"
                     android:text="Close"
                     android:textSize="14sp"
+                    app:backgroundTint="#023047"
                     android:layout_centerInParent="true" />
                 <Button
                     android:id="@+id/btnSaveChanges"
@@ -247,8 +248,10 @@
                     android:layout_height="wrap_content"
                     android:text="Save"
                     android:textSize="14sp"
+                    app:backgroundTint="#1E97F4"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
+                    android:visibility="gone"
                     />
             </RelativeLayout>
         </LinearLayout>
