--- a/app/src/main/res/layout/items_spendings.xml
+++ b/app/src/main/res/layout/items_spendings.xml
@@ -9,136 +9,129 @@
     android:layout_margin="16dp"
     android:id="@+id/cardView">
 
-    <LinearLayout
-        android:layout_width="356dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="6dp"
-        android:layout_marginStart="16dp"
-        android:orientation="vertical">
+        android:padding="16dp">
 
-        <LinearLayout
+        <!-- Title Label -->
+        <TextView
+            android:id="@+id/labelTitleItemsSpendings"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:text="@string/TiTle"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- Title Value -->
+
+        <!-- Checkbox for marking as paid -->
+
+        <CheckBox
+            android:id="@+id/imgCheckBoxItemsSpendings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:text="@string/paid"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/textviewTitleItemsSpendings"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textviewTitleItemsSpendings" />
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/TiTle"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textviewTitleSpendings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Arya"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <!-- Category Label -->
+        <TextView
+            android:id="@+id/labelCategoryItemsSpendings"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_marginTop="8dp"
+            android:text="@string/CaTegory"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/labelTitleItemsSpendings" />
 
+        <!-- Category Value -->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/CaTegory"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textviewCategorySpendings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Education"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <!-- Amount Label -->
+        <TextView
+            android:id="@+id/labelAmountItemsSpendings"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal" />
+            android:layout_marginTop="8dp"
+            android:text="@string/aMount"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/labelCategoryItemsSpendings" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <!-- Amount Value -->
+
+        <!-- Purchase Date Label -->
+        <TextView
+            android:id="@+id/textviewAmountItemsSpendings"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:text="$1200"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+
+            app:layout_constraintStart_toEndOf="@id/labelAmountItemsSpendings"
+            app:layout_constraintStart_toStartOf="@+id/textviewDateItemsSpendings"
+            app:layout_constraintTop_toTopOf="@id/labelAmountItemsSpendings" />
+
+        <TextView
+            android:id="@+id/textviewTitleItemsSpendings"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="8dp"
+            android:text="Arya"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/labelTitleItemsSpendings"
+            app:layout_constraintStart_toStartOf="@+id/textviewCategoryItemsSpendings"
+
+            app:layout_constraintWidth_default="wrap" />
+
+        <TextView
+            android:id="@+id/textviewCategoryItemsSpendings"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:text="Education"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/labelCategoryItemsSpendings"
+            app:layout_constraintStart_toStartOf="@+id/textviewAmountItemsSpendings"
+            app:layout_constraintTop_toTopOf="@id/labelCategoryItemsSpendings" />
+
+        <TextView
+            android:id="@+id/textviewDateItemsSpendings"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:layout_marginStart="12dp"
+            android:text="1/6/2024"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/labelDateItemsSpendings"
+            app:layout_constraintTop_toTopOf="@id/labelDateItemsSpendings" />
+
+        <TextView
+            android:id="@+id/labelDateItemsSpendings"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_marginTop="8dp"
+            android:text="@string/purchase_Date"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/labelAmountItemsSpendings" />
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/aMount"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textviewAmountSpendings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="$1200"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/purchase_Date"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textviewDateSpendings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="1/6/2024"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-
+        <!-- Purchase Date Value -->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
